--- a/.github/workflows/latexmk.yml
+++ b/.github/workflows/latexmk.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: yegor256/latexmk-action@0.8.1
         with:
           cmd: make
-          packages: acmart huawei cjk ffcode href-ul datetime fmtcount libertine paralist makecell footmisc currfile enumitem wrapfig lastpage biblatex titling svg trimspaces catchfile transparent textpos fvextra xstring framed environ totpages hyperxmp ifmtarg ncctools comment anyfontsize fdsymbol algpseudocodex algorithmicx stmaryrd preprint cyrillic cm-super babel-russian hyphen-russian lh to-be-determined cancel crumbs clicks varwidth fontsize multirow changepage tikzpagenodes ifoddpage qrcode sppalit ppt-slides
+          packages: acmart huawei cjk ffcode href-ul datetime fmtcount libertine paralist makecell footmisc currfile enumitem wrapfig lastpage biblatex titling svg trimspaces catchfile transparent textpos fvextra xstring framed environ totpages hyperxmp ifmtarg ncctools comment anyfontsize fdsymbol algpseudocodex algorithmicx stmaryrd preprint cyrillic cm-super babel-russian hyphen-russian lh to-be-determined cancel crumbs clicks varwidth fontsize multirow changepage tikzpagenodes ifoddpage qrcode ppt-slides
       - uses: JamesIves/github-pages-deploy-action@v4.4.3
         with:
           branch: gh-pages
