--- a/.rultor.yml
+++ b/.rultor.yml
@@ -1,11 +1,9 @@
 docker:
-  image: yegor256/rultor-image:1.19.0
+  image: yegor256/rultor-image:1.22.0
 install: |-
-  sudo gem install texsc:0.6.0
-  sudo gem install texqc:0.6.0
-  sudo apt-get -y update
-  sudo apt-get -y install aspell
-  sudo apt-get -y install ghostscript
+  sudo tlmgr option repository ctan
+  sudo tlmgr --verify-repo=none update --self
+  sudo tlmgr --verify-repo=none install huawei xstring totpages environ hyperxmp ifmtarg ncctools comment biblatex href-ul libertine ffcode acmart cjk ffcode href-ul datetime fmtcount libertine paralist makecell footmisc currfile enumitem wrapfig lastpage biblatex titling svg trimspaces catchfile transparent textpos fvextra xstring framed environ totpages hyperxmp ifmtarg ncctools comment anyfontsize fdsymbol algpseudocodex algorithmicx stmaryrd preprint cyrillic cm-super babel-russian hyphen-russian lh to-be-determined cancel iexec docshots upquote eolang crumbs clicks ppt-slides fontsize changepage ifoddpage doi pgf tikzfill pdfcol listingsutf8 bbold semantic cleveref adjustbox mdframed zref needspace csquotes
 merge:
   script: |-
     make
