--- a/.github/workflows/latexmk.yml
+++ b/.github/workflows/latexmk.yml
@@ -1,7 +1,11 @@
 name: latexmk
 on:
   push:
-    branches: master
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   latexmk:
     runs-on: ubuntu-22.04
@@ -16,3 +20,4 @@ jobs:
           branch: gh-pages
           folder: package
           clean: false
+        if: github.ref == 'refs/heads/master'
