--- a/.github/workflows/bibcop.yml
+++ b/.github/workflows/bibcop.yml
@@ -21,7 +21,11 @@
 name: bibcop
 'on':
   push:
+    branches:
+      - master
   pull_request:
+    branches:
+      - master
 jobs:
   bibcop:
     runs-on: ubuntu-24.04
