--- a/.rultor.yml
+++ b/.rultor.yml
@@ -19,7 +19,7 @@
 # SOFTWARE.
 ---
 docker:
-  image: yegor256/rultor-image:1.23.1
+  image: yegor256/rultor-latex
 install: |-
   sudo tlmgr option repository ctan
   sudo tlmgr --verify-repo=none update --self
