--- a/.github/workflows/latexmk.yml
+++ b/.github/workflows/latexmk.yml
@@ -31,6 +31,8 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: true
       - uses: yegor256/latexmk-action@0.15.0
         with:
           cmd: make
