--- a/.rultor.yml
+++ b/.rultor.yml
@@ -21,10 +21,7 @@
 docker:
   image: yegor256/rultor-latex
 install: |-
-  sudo tlmgr option repository ctan
-  sudo tlmgr --verify-repo=none update --self
-  sudo tlmgr --verify-repo=none install $(cut -d' ' -f2 DEPENDS.txt | uniq)
-  sudo tlmgr --verify-repo=none update $(cut -d' ' -f2 DEPENDS.txt | uniq)
+  sudo lecture-notes/tlmgr-install.sh
 merge:
   script: |-
     make
