--- a/.github/workflows/latexmk.yml
+++ b/.github/workflows/latexmk.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           submodules: true
       - run: sudo apt-get update && sudo apt-get install -y wget
+      - run: /bin/echo works
       - uses: yegor256/latexmk-action@0.15.0
         with:
           cmd: make
