--- a/.github/workflows/latexmk.yml
+++ b/.github/workflows/latexmk.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-      - run: sudo apt-get update && sudo apt-get install -y wget
+      - run: sudo apt-get update --yes --fix-missing && sudo apt-get install --yes wget
       - run: /bin/echo works
       - uses: yegor256/latexmk-action@0.15.0
         with:
