--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,28 @@
-.DS_Store
-target/
-_minted-*/
+*.aux
+*.bbl
+*.bbl-SAVE-ERROR
+*.bcf
+*.bcf-SAVE-ERROR
+*.blg
+*.crumbs
+*.dvi
+*.fdb_latexmk
+*.fls
 *.idx
 *.ilg
 *.ind
-*.pdf
-*.bbl
-*.bcf
-*.blg
-*.fdb_latexmk
-_minted-wp/
-*.fls
 *.log
-*.run.xml
-*.aux
-*.pyg
 *.out
-*.dvi
-*.xcp
+*.pdf
+*.pyg
+*.run.xml
 *.toc
-*.crumbs
-package/
+*.xcp
+.DS_Store
+.idea/
+_minted-*/
+_minted-wp/
 iexec.*
-*.bbl-SAVE-ERROR
-*.bcf-SAVE-ERROR
+node_modules/
+package/
+target/
