--- a/REUSE.toml
+++ b/REUSE.toml
@@ -4,6 +4,13 @@
 version = 1
 [[annotations]]
 path = [
+    "**.jpg",
+    "**.json",
+    "**.md",
+    "**.pdf",
+    "**.png",
+    "**.svg",
+    "**.txt",
     "**/*.csv",
     "**/*.jpg",
     "**/*.json",
@@ -13,22 +20,25 @@ path = [
     "**/*.svg",
     "**/*.txt",
     "**/*.vm",
+    "**/.DS_Store",
     "**/.gitignore",
-    "**/CNAME",
-    ".gitattributes",
-    ".gitignore",
-    ".gitleaksignore",
-    ".gitmodules",
-    ".pdd",
-    ".xcop",
-    "Gemfile.lock",
-    "README.md",
-    ".latexmkrc",
-    ".texqc",
-    ".texsc",
+    "**/.gitmodules",
     "**/.latexmkrc",
     "**/.texqc",
     "**/.texsc",
+    "**/CNAME",
+    "**/DEPENDS.txt",
+    "**/aspell.en.pws",
+    ".DS_Store",
+    ".gitattributes",
+    ".gitignore",
+    ".gitmodules",
+    ".latexmkrc",
+    ".texqc",
+    ".texsc",
+    "DEPENDS.txt",
+    "README.md",
+    "aspell.en.pws",
     "renovate.json",
 ]
 precedence = "override"
